--- a/lib/AstrodynamicalModels/docs/Project.toml
+++ b/lib/AstrodynamicalModels/docs/Project.toml
@@ -1,7 +1,9 @@
 [deps]
 AstrodynamicalModels = "4282b555-f590-4262-b575-3e516e1493a7"
-BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
+DocumenterQuarto = "73f83fcb-c367-40db-89b6-8fd94701aaf2"
+IJulia = "7073ff75-c697-5162-941a-fcdaad2a7d2a"
 Latexify = "23fbe1c1-3f47-55db-b15f-69d7ec21a316"
 ModelingToolkit = "961ee093-0014-501f-94e3-6117800e7a78"
+Quarto = "d7167be5-f61b-4dc9-b75c-ab62374668c5"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
