--- a/lib/AstrodynamicalSolvers/docs/Project.toml
+++ b/lib/AstrodynamicalSolvers/docs/Project.toml
@@ -5,11 +5,12 @@ AstrodynamicalSolvers = "636ee813-9c9e-4a0a-af07-88b3043dcb77"
 CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
-DocumenterTools = "35a29f4d-8980-5a13-9543-d66fff28ecb8"
+DocumenterQuarto = "73f83fcb-c367-40db-89b6-8fd94701aaf2"
+IJulia = "7073ff75-c697-5162-941a-fcdaad2a7d2a"
 Latexify = "23fbe1c1-3f47-55db-b15f-69d7ec21a316"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
-LiveServer = "16fef848-5104-11e9-1b77-fb7a48bbb589"
 OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+Quarto = "d7167be5-f61b-4dc9-b75c-ab62374668c5"
 SPICE = "5bab7191-041a-5c2e-a744-024b9c3a5062"
 SPICEKernels = "8e9d28ce-e483-4ef7-bfd9-45b8fef6369c"
