--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,7 +1,7 @@
 [deps]
-DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
-DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
+DocumenterQuarto = "73f83fcb-c367-40db-89b6-8fd94701aaf2"
 GeneralAstrodynamics = "8068df5b-8501-4530-bd82-d24d3c9619db"
-MultiDocumenter = "87ed4bf0-c935-4a67-83c3-2a03bee4197c"
-Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+Git = "d7ba0133-e1db-5d97-8f8c-041e4b3a1eb2"
+IJulia = "7073ff75-c697-5162-941a-fcdaad2a7d2a"
+Quarto = "d7167be5-f61b-4dc9-b75c-ab62374668c5"
