--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -31,6 +31,7 @@ jobs:
           - AstrodynamicalSolvers
         version:
           - "1"
+          - "lts"
     steps:
       - uses: actions/checkout@v4
       - uses: julia-actions/setup-julia@v2
