--- a/.github/workflows/Documentation.yml
+++ b/.github/workflows/Documentation.yml
@@ -37,6 +37,7 @@ jobs:
 
   deploy-superpackage:
     runs-on: ubuntu-latest
+    needs: [deploy-subpackages]
     steps:
       - uses: actions/checkout@v2
       - uses: julia-actions/setup-julia@latest
