--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -53,15 +53,12 @@ jobs:
       - uses: julia-actions/julia-processcoverage@v1
         with:
           directories: lib/${{ matrix.group }}
-      - uses: codecov/codecov-action@v4
-        env:
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+      - uses: codecov/codecov-action@v2
         with:
-          flags: ${{ matrix.group }}.jl
-          working-directory: lib/${{ matrix.group }}
-          verbose: true
-          fail_ci_if_error: true
           files: lcov.info
+          token: ${{ secrets.CODECOV_TOKEN }}
+          flags: ${{ matrix.group }}.jl
+          fail_ci_if_error: true
   test-superpackage:
     runs-on: ubuntu-latest
     strategy:
@@ -89,10 +86,9 @@ jobs:
         env:
           GROUP: "GeneralAstrodynamics"
       - uses: julia-actions/julia-processcoverage@v1
-      - uses: codecov/codecov-action@v4
-        env:
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+      - uses: codecov/codecov-action@v2
         with:
-          verbose: true
-          fail_ci_if_error: true
           files: lcov.info
+          token: ${{ secrets.CODECOV_TOKEN }}
+          flags: GeneralAstrodynamics.jl
+          fail_ci_if_error: true
