--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -52,8 +52,8 @@ jobs:
           project: lib/${{ matrix.group }}
       - uses: julia-actions/julia-processcoverage@v1
         with:
-          directories: lib/${{ matrix.group }}
-      - uses: codecov/codecov-action@v2
+          directories: lib/${{ matrix.group }}/src
+      - uses: codecov/codecov-action@v5
         with:
           files: lcov.info
           token: ${{ secrets.CODECOV_TOKEN }}
@@ -86,7 +86,9 @@ jobs:
         env:
           GROUP: "GeneralAstrodynamics"
       - uses: julia-actions/julia-processcoverage@v1
-      - uses: codecov/codecov-action@v2
+        with:
+          directories: src,lib/AstrodynamicalCalculations/src,lib/AstrodynamicalModels/src,lib/AstrodynamicalSolvers/src
+      - uses: codecov/codecov-action@v5
         with:
           files: lcov.info
           token: ${{ secrets.CODECOV_TOKEN }}
