--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -87,7 +87,7 @@ jobs:
           GROUP: "GeneralAstrodynamics"
       - uses: julia-actions/julia-processcoverage@v1
         with:
-          directories: src,lib/AstrodynamicalCalculations/src,lib/AstrodynamicalModels/src,lib/AstrodynamicalSolvers/src
+          directories: src
       - uses: codecov/codecov-action@v5
         with:
           files: lcov.info
