--- a/lib/AstrodynamicalSolvers/docs/src/_quarto.yml
+++ b/lib/AstrodynamicalSolvers/docs/src/_quarto.yml
@@ -7,11 +7,16 @@ book:
     author:
         name: "Joey Carpinelli"
         email: "joey@loopy.codes"
-    date: "2025-03-02"
+    date: "2025-08-17"
     chapters:
         - index.md
-        - examples/index.qmd
-        - api/index.qmd
+        - part: examples/index.qmd
+          chapters:
+            - examples/propagation/index.qmd
+            - examples/periodic-orbits/index.qmd
+            - examples/manifolds/index.qmd
+            - examples/plotting/index.qmd
+        - part: api/index.qmd
 
     navbar:
         background: primary
@@ -31,8 +36,10 @@ book:
 
 toc-title: "Table of Contents"
 
+engine: julia
+
 execute:
-    echo: false
+    echo: true
     output: true
     cache: false
     freeze: false
