--- a/Project.toml
+++ b/Project.toml
@@ -12,6 +12,11 @@ EphemerisSources = "858900df-f7ae-402a-aa8c-3e4ef85aa271"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 SPICE = "5bab7191-041a-5c2e-a744-024b9c3a5062"
 
+[sources]
+AstrodynamicalCalculations = {path="lib/AstrodynamicalCalculations"}
+AstrodynamicalModels = {path="lib/AstrodynamicalModels"}
+AstrodynamicalSolvers = {path="lib/AstrodynamicalSolvers"}
+
 [compat]
 AstrodynamicalCalculations = "0.5, 1"
 AstrodynamicalModels = "3.4"
