--- a/lib/AstrodynamicalModels/Project.toml
+++ b/lib/AstrodynamicalModels/Project.toml
@@ -24,7 +24,7 @@ SPICEBodiesExt = "SPICEBodies"
 AstrodynamicalCalculations = "1"
 DocStringExtensions = "0.9"
 Memoize = "0.4"
-ModelingToolkit = "9.3"
+ModelingToolkit = "9.3, 10"
 SciMLBase = "2"
 StaticArrays = "1"
 Symbolics = "5, 6"
