--- a/lib/AstrodynamicalSolvers/Project.toml
+++ b/lib/AstrodynamicalSolvers/Project.toml
@@ -14,14 +14,18 @@ Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 SciMLBase = "0bca4576-84f4-4d90-8ffe-ffa030f20462"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
+[sources]
+AstrodynamicalModels = {path="../AstrodynamicalModels"}
+AstrodynamicalCalculations = {path="../AstrodynamicalCalculations"}
+
 [compat]
 AstrodynamicalCalculations = "1"
 AstrodynamicalModels = "3.8"
 DocStringExtensions = "0.9"
-ModelingToolkit = "9"
+ModelingToolkit = "9, 10"
 OrdinaryDiffEqVerner = "1.1.1"
 Reexport = "1"
-SciMLBase = "2.59.2"
+SciMLBase = "2"
 StaticArrays = "1.6"
 julia = "1.7"
 
