chore!: switch to `ModelingToolkit` version 10
fix: update syntax to pass tests with latest `ModelingToolkit` v9

fix: path for AstrodynamicalCalculations

--- a/lib/AstrodynamicalSolvers/Project.toml
+++ b/lib/AstrodynamicalSolvers/Project.toml
@@ -22,7 +22,7 @@ AstrodynamicalCalculations = {path="../AstrodynamicalCalculations"}
 AstrodynamicalCalculations = "1"
 AstrodynamicalModels = "3.8"
 DocStringExtensions = "0.9"
-ModelingToolkit = "9, 10"
+ModelingToolkit = "9"
 OrdinaryDiffEqVerner = "1.1.1"
 Reexport = "1"
 SciMLBase = "2"
