--- a/lib/AstrodynamicalModels/Project.toml
+++ b/lib/AstrodynamicalModels/Project.toml
@@ -1,7 +1,7 @@
 name = "AstrodynamicalModels"
 uuid = "4282b555-f590-4262-b575-3e516e1493a7"
-authors = ["Joseph D Carpinelli <joey@loopy.codes>"]
 version = "3.8.0"
+authors = ["Joseph D Carpinelli <joey@loopy.codes>"]
 
 [deps]
 DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
@@ -13,8 +13,8 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
 
 [weakdeps]
-AstrodynamicalCalculations = "c0cf9fb7-f496-4999-a425-c50785d1b88b"
 SPICEBodies = "19f1efb6-7162-484a-b3a1-b52c391689d7"
+AstrodynamicalCalculations = "c0cf9fb7-f496-4999-a425-c50785d1b88b"
 
 [extensions]
 AstrodynamicalCalculationsExt = "AstrodynamicalCalculations"
@@ -24,7 +24,7 @@ SPICEBodiesExt = "SPICEBodies"
 AstrodynamicalCalculations = "1"
 DocStringExtensions = "0.9"
 Memoize = "0.4"
-ModelingToolkit = "9.3, 10"
+ModelingToolkit = "9"
 SciMLBase = "2"
 StaticArrays = "1"
 Symbolics = "5, 6"
@@ -32,6 +32,10 @@ julia = "1.7"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+AstrodynamicalCalculations = "c0cf9fb7-f496-4999-a425-c50785d1b88b"
 
 [targets]
 test = ["Test", "SPICEBodies", "AstrodynamicalCalculations"]
+
+[sources]
+AstrodynamicalCalculations = {path="../AstrodynamicalCalculations"}
