--- a/.github/workflows/Documentation.yml
+++ b/.github/workflows/Documentation.yml
@@ -46,8 +46,7 @@ jobs:
       - run: pip install jupyter
 
       - name: Install Documentation Dependencies
-        run: julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd())); Pkg.instantiate(); Pkg.build()'
-
+        run: julia --project=docs/ -e 'using Pkg; Pkg.develop([PackageSpec(path=pwd()), PackageSpec(path=joinpath("lib", "AstrodynamicalCalculations")), PackageSpec(path=joinpath("lib", "AstrodynamicalModels")), PackageSpec(path=joinpath("lib", "AstrodynamicalSolvers"))]); Pkg.instantiate(); Pkg.build()'
 
       - name: Build and deploy
         env:
