--- a/lib/AstrodynamicalSolvers/docs/Project.toml
+++ b/lib/AstrodynamicalSolvers/docs/Project.toml
@@ -6,6 +6,7 @@ CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 DocumenterQuarto = "73f83fcb-c367-40db-89b6-8fd94701aaf2"
+ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 IJulia = "7073ff75-c697-5162-941a-fcdaad2a7d2a"
 Latexify = "23fbe1c1-3f47-55db-b15f-69d7ec21a316"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
@@ -14,3 +15,5 @@ Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Quarto = "d7167be5-f61b-4dc9-b75c-ab62374668c5"
 SPICE = "5bab7191-041a-5c2e-a744-024b9c3a5062"
 SPICEKernels = "8e9d28ce-e483-4ef7-bfd9-45b8fef6369c"
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
