--- a/release-please-config.json
+++ b/release-please-config.json
@@ -27,7 +27,9 @@
   "pull-request-footer": "This release was generated with [Release Please][1]\n\n[1]: https://github.com/googleapis/release-please",
   "draft-pull-request": true,
   "packages": {
-    ".": {},
+    ".": {
+      "component": "GeneralAstrodynamics"
+    },
     "lib/AstrodynamicalCalculations": {
       "component": "AstrodynamicalCalculations",
       "changelog-path": "lib/AstrodynamicalCalculations/CHANGELOG.md"
