--- a/lib/AstrodynamicalModels/Project.toml
+++ b/lib/AstrodynamicalModels/Project.toml
@@ -24,10 +24,10 @@ SPICEBodiesExt = "SPICEBodies"
 AstrodynamicalCalculations = "1"
 DocStringExtensions = "0.9"
 Memoize = "0.4"
-ModelingToolkit = "9"
+ModelingToolkit = "11"
 SciMLBase = "2"
 StaticArrays = "1"
-Symbolics = "5, 6"
+Symbolics = "7"
 julia = "1.7"
 
 [extras]
