--- a/lib/AstrodynamicalModels/Project.toml
+++ b/lib/AstrodynamicalModels/Project.toml
@@ -3,6 +3,9 @@ uuid = "4282b555-f590-4262-b575-3e516e1493a7"
 version = "3.8.0"
 authors = ["Joseph D Carpinelli <joey@loopy.codes>"]
 
+[workspace]
+projects = ["docs", "test"]
+
 [deps]
 DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
@@ -28,14 +31,4 @@ ModelingToolkit = "9"
 SciMLBase = "2"
 StaticArrays = "1"
 Symbolics = "5, 6"
-julia = "1.7"
-
-[extras]
-Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
-AstrodynamicalCalculations = "c0cf9fb7-f496-4999-a425-c50785d1b88b"
-
-[targets]
-test = ["Test", "SPICEBodies", "AstrodynamicalCalculations"]
-
-[sources]
-AstrodynamicalCalculations = {path="../AstrodynamicalCalculations"}
+julia = "1.10"
