finish cleaning up subpackage Project.tomls

--- a/lib/AstrodynamicalSolvers/Project.toml
+++ b/lib/AstrodynamicalSolvers/Project.toml
@@ -21,6 +21,7 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 AstrodynamicalCalculations = "1"
 AstrodynamicalModels = "3.8"
 DocStringExtensions = "0.9"
+LinearAlgebra = "1"
 ModelingToolkit = "9"
 OrdinaryDiffEqVerner = "1.1.1"
 Reexport = "1"
