--- a/lib/AstrodynamicalCalculations/Project.toml
+++ b/lib/AstrodynamicalCalculations/Project.toml
@@ -1,7 +1,7 @@
 name = "AstrodynamicalCalculations"
 uuid = "c0cf9fb7-f496-4999-a425-c50785d1b88b"
-authors = ["Joey Carpinelli <joey@loopy.codes>"]
 version = "1.0.0"
+authors = ["Joey Carpinelli <joey@loopy.codes>"]
 
 [workspace]
 projects = ["docs", "test"]
@@ -15,7 +15,8 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
 [compat]
 DocStringExtensions = "0.9"
+LinearAlgebra = "1"
 Reexport = "1.2"
-StaticArrays = "1.6"
 Roots = "2.0"
+StaticArrays = "1.6"
 julia = "1.10"
