--- a/lib/AstrodynamicalModels/Project.toml
+++ b/lib/AstrodynamicalModels/Project.toml
@@ -26,8 +26,10 @@ SPICEBodiesExt = "SPICEBodies"
 [compat]
 AstrodynamicalCalculations = "1"
 DocStringExtensions = "0.9"
+LinearAlgebra = "1"
 Memoize = "0.4"
 ModelingToolkit = "9"
+SPICEBodies = "1"
 SciMLBase = "2"
 StaticArrays = "1"
 Symbolics = "5, 6"
