--- a/lib/AstrodynamicalCalculations/Project.toml
+++ b/lib/AstrodynamicalCalculations/Project.toml
@@ -3,9 +3,6 @@ uuid = "c0cf9fb7-f496-4999-a425-c50785d1b88b"
 authors = ["Joey Carpinelli <joey@loopy.codes>"]
 version = "1.0.0"
 
-[workspace]
-projects = ["docs", "test"]
-
 [deps]
 DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
@@ -18,4 +15,10 @@ DocStringExtensions = "0.9"
 Reexport = "1.2"
 StaticArrays = "1.6"
 Roots = "2.0"
-julia = "1.10"
+julia = "1.6"
+
+[extras]
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[targets]
+test = ["Test"]
