--- a/lib/AstrodynamicalModels/Project.toml
+++ b/lib/AstrodynamicalModels/Project.toml
@@ -1,10 +1,7 @@
 name = "AstrodynamicalModels"
 uuid = "4282b555-f590-4262-b575-3e516e1493a7"
-authors = ["Joseph D Carpinelli <joey@loopy.codes>"]
 version = "3.8.0"
-
-[workspace]
-projects = ["docs", "test"]
+authors = ["Joseph D Carpinelli <joey@loopy.codes>"]
 
 [deps]
 DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
@@ -31,4 +28,14 @@ ModelingToolkit = "9"
 SciMLBase = "2"
 StaticArrays = "1"
 Symbolics = "5, 6"
-julia = "1.10"
+julia = "1.7"
+
+[extras]
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+AstrodynamicalCalculations = "c0cf9fb7-f496-4999-a425-c50785d1b88b"
+
+[targets]
+test = ["Test", "SPICEBodies", "AstrodynamicalCalculations"]
+
+[sources]
+AstrodynamicalCalculations = {path="../AstrodynamicalCalculations"}
