--- a/Project.toml
+++ b/Project.toml
@@ -30,6 +30,7 @@ julia = "1.7"
 [extras]
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+ParallelTestRunner = "d3525ed8-44d0-4b2c-a655-542cee43accc"
 
 [targets]
-test = ["Test", "Pkg"]
+test = ["Test", "ParallelTestRunner", "Pkg"]
