--- a/lib/AstrodynamicalCalculations/Project.toml
+++ b/lib/AstrodynamicalCalculations/Project.toml
@@ -19,6 +19,7 @@ julia = "1.6"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+ParallelTestRunner = "d3525ed8-44d0-4b2c-a655-542cee43accc"
 
 [targets]
-test = ["Test"]
+test = ["Test", "ParallelTestRunner"]
