--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -83,6 +83,8 @@ jobs:
             ${{ runner.os }}-
       - uses: julia-actions/julia-buildpkg@v1
       - uses: julia-actions/julia-runtest@v1
+        with:
+          test_args: "--verbose"
         env:
           GROUP: "GeneralAstrodynamics"
       - uses: julia-actions/julia-processcoverage@v1
