--- a/lib/AstrodynamicalModels/Project.toml
+++ b/lib/AstrodynamicalModels/Project.toml
@@ -28,9 +28,9 @@ AstrodynamicalCalculations = "1"
 DocStringExtensions = "0.9"
 LinearAlgebra = "1"
 Memoize = "0.4"
-ModelingToolkit = "9"
+ModelingToolkit = "11"
 SPICEBodies = "1"
 SciMLBase = "2"
 StaticArrays = "1"
-Symbolics = "5, 6"
+Symbolics = "7"
 julia = "1.10"
