--- a/Project.toml
+++ b/Project.toml
@@ -17,7 +17,7 @@ SPICE = "5bab7191-041a-5c2e-a744-024b9c3a5062"
 
 [compat]
 AstrodynamicalCalculations = "0.5, 1"
-AstrodynamicalModels = "3.4"
+AstrodynamicalModels = "3.4, 3.8"
 AstrodynamicalSolvers = "0.5, 1"
 DocStringExtensions = "0.9"
 EphemerisSources = "1.0.0"
