--- a/lib/AstrodynamicalSolvers/test/Project.toml
+++ b/lib/AstrodynamicalSolvers/test/Project.toml
@@ -6,5 +6,6 @@ AstrodynamicalSolvers = "636ee813-9c9e-4a0a-af07-88b3043dcb77"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 ModelingToolkit = "961ee093-0014-501f-94e3-6117800e7a78"
 OrdinaryDiffEqVerner = "79d7bb75-1356-48c1-b8c0-6832512096c2"
+ParallelTestRunner = "d3525ed8-44d0-4b2c-a655-542cee43accc"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
